# libretro-lightgun-test

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: libretro.cpp  sysfont.cpp
